# scale-rust

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  scale.db
migrations/2021-08-09-085842_create_params/: down.sql  up.sql
migrations/2021-08-09-090551_create_owners/: down.sql  up.sql
migrations/2021-08-09-090921_create_journal_entries/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  scale.db  schema.rs
