[package]
name = "scale-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.7", features = ["sqlite"] }
dotenv = "0.15.0"
libsqlite3-sys = { version = "^0", features = ["bundled"] }
