[package]
name = "scale_rust"
version = "0.1.0"
license = "MIT"
authors = ["Francesco Stiffoni <fstiffo@sgajo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.7", features = ["sqlite", "chrono"] }
chrono = { version = "0.4.19"}
dotenv = "0.15.0"
libsqlite3-sys = { version = "^0", features = ["bundled"] }
cursive = {version = "0.16.3", default-features=false, features = ["crossterm-backend"]}
cursive_table_view = {version = "0.13.3"}